--- a/sample.html
+++ b/sample.html
@@ -1,29 +1,34 @@
 <!DOCTYPE html>
 <html lang="ja">
-
+ <head>
     <meta charset="UTF-8" />
-    <h1>サービス紹介</h1>
+    <link rel="stylesheet" href="style.css" />
+    <title>BOX</title>
+  </head>
+   <body>
+<h1>サービス紹介</h1>
 
 <h2>webcamp</h2>
 
 <p>マンツーマンサポートによる学習で、確実にWebスキルを習得できるプログラミングスクールです。</p>
 
-<a>webサイト</a>
+<a href="https://web-camp.io/">webサイト</a>
 
 <h2>webcamp pro</h2>
-
 <p>未経験から転職を保証する日本で唯一のプログラミングスクールです。</p>
 
-<a>webサイト</a>
+<a href="https://web-camp.io/commit/">webサイト</a>
 
 <h2>webcamp woman</h2>
 
 <P>家庭も仕事も頑張りたい主婦・ママ向けの、1ヶ月でWebサイトを制作するWebデザインスクールです。</P>
 
-<a>webサイト</a>
+<a href="https://web-camp.io/">webサイト</a>
 
 <h2>webcamp career</h2>
 
 <p>3000名のエンジニアをサポートしてきたエージェントがあなたの転職をサポート。</p>
 
-<a>webサイト</a>
+<a href="https://web-camp.io/">webサイト</a>
+
+</body>
